# learn_opengl

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  Makefile
res/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
